removed twitter link in footer

--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -6,6 +6,6 @@
     li
       a href="https://github.com/nozbzh" target="_blank"
         i.fa.fa-github aria-hidden="true"
-    li
-      a href="https://twitter.com/@nozbzh" target="_blank"
-        i.fa.fa-twitter aria-hidden="true"
+    / li
+    /   a href="https://twitter.com/@nozbzh" target="_blank"
+    /     i.fa.fa-twitter aria-hidden="true"
