--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -4,7 +4,7 @@
     img.img-responsive.center-block src="https://avatars2.githubusercontent.com/u/10394006?v=3&s=460"
   .col-sm-9.justify
     p
-      | Most recently I worked as a contractor for #{link_to "DreamSeeDo", "http://dreamseedo.org/", target: :blank}, a startup developing an online group learning platform. Independent, remote, closely with CTO.
+      | Most recently I worked as a contractor for #{link_to "DreamSeeDo", "http://dreamseedo.org/", target: :blank}, an online group learning platform. It was largely a remote position but I would usually spend one day a week co-working with the CTO.
     p
       | Before moving to San Francisco I worked at #{link_to "Capsens", "http://capsens.eu/", target: :blank}, a startup based in Paris which builds crowdfunding platforms for clients. Have a look at some of the projects I worked on: #{link_to "Ekosea", "https://ekosea.com/", target: :blank}, #{link_to "Suncities", "https://suncities.net/", target: :blank} and #{link_to "HappyJ", "https://happyj.fr/", target: :blank}.
     p
