--- a/app/views/projects/index.html.slim
+++ b/app/views/projects/index.html.slim
@@ -1,13 +1,13 @@
 .row
-  h2 Hi, I'm No&eacute;. I'm a Rails developer. Check out some of my projects:
+  / h2 Hi, I'm No&eacute;. I'm a Rails developer. Check out some of my projects:
   .padded-top
     - @projects.each do |project|
-      .col-md-3
+      .col-md-6
         .col-xs-12
           a href=project_path(project.slug)
-            img.padded-bottom.img-responsive.center-block src=project.image.content
-            h3 =project.name
-        .col-xs-12.bottom-lined
-          .redact
-            p =raw(project.summary)
-          hr
+            img.img-responsive.center-block src=project.image.content
+            h3.text-center.padded-bottom =project.name
+        / .col-xs-12.bottom-lined
+        /   .redact
+        /     p =raw(project.summary)
+        /   hr
