--- a/app/assets/stylesheets/pages/_projects.scss
+++ b/app/assets/stylesheets/pages/_projects.scss
@@ -30,6 +30,6 @@ body {
 
 @media screen and (min-width: 768px) {
   .img-responsive {
-    max-width: 66% !important;
+    // max-width: 66% !important;
   }
 }
