added opacity on img hover

--- a/app/assets/stylesheets/pages/_projects.scss
+++ b/app/assets/stylesheets/pages/_projects.scss
@@ -15,6 +15,14 @@ body {
   overflow: auto;
 }
 
+.projects {
+  a:hover {
+    img {
+     opacity: 0.7;
+    }
+  }
+}
+
 
 @media screen and (max-width: 991px) {
   .projects {
