--- a/app/assets/stylesheets/pages/_projects.scss
+++ b/app/assets/stylesheets/pages/_projects.scss
@@ -23,6 +23,11 @@ body {
   }
 }
 
+.show {
+  .img-responsive {
+    max-width: 50% !important;
+  }
+}
 
 @media screen and (max-width: 991px) {
   .projects {
