updated resume and about me

--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -6,13 +6,7 @@
     p
       | Most recently I worked as a contractor for #{link_to "DreamSeeDo", "http://dreamseedo.org/", target: :blank}, an online group learning platform. It was largely a remote position but I would usually spend one day a week co-working with the CTO.
     p
-      | Before moving to San Francisco I worked at #{link_to "Capsens", "http://capsens.eu/", target: :blank}, a startup based in Paris which builds crowdfunding platforms for clients. Have a look at some of the projects I worked on: #{link_to "Ekosea", "https://ekosea.com/", target: :blank}, #{link_to "Suncities", "https://suncities.net/", target: :blank} and #{link_to "HappyJ", "https://happyj.fr/", target: :blank}.
-    p
-      ' I found my way to web development through
-      a href="https://www.lewagon.com/" target="_blank" Le Wagon
-      ', a developer bootcamp in Paris. This 9-week intensive program is where I learned Ruby on Rails through hands-on exercises and pair-programming. The course culminated in a capstone project where I was part of a team of 3 who built a marketplace prototype for high-end furniture,
-      a href="https://lesalon.herokuapp.com" target="_blank" Le Salon
-      |.
+      | Before moving to San Francisco I worked at #{link_to "Capsens", "http://capsens.eu/", target: :blank}, a Paris-based startup building crowdfunding platforms for clients. Have a look at some of the projects I worked on: #{link_to "Ekosea", "https://ekosea.com/", target: :blank}, #{link_to "Suncities", "https://suncities.net/", target: :blank} and #{link_to "HappyJ", "https://happyj.fr/", target: :blank}.
     p
       | Prior to being a web developer, I was a scuba diving instructor and I spent several years in South East Asia, where I taught myself Indonesian and Malay. I learned how to take apart regulators. A regulator is a diver’s life support underwater, and I loved the confidence I got from knowing that my being meticulous in the rebuilding process is what ensured everyone's safety. Just like I love knowing that an app I built can be reliably deployed because of the tests I wrote.
       br
