--- a/app/views/pages/resume.html.slim
+++ b/app/views/pages/resume.html.slim
@@ -1,2 +1,4 @@
-object data=pdf_path type="application/pdf" style="width: 100%; height: 1200px; padding-top: 1em"
-  a href=pdf_path noe-stauffert.pdf
+.row
+  .col-md-8.col-md-offset-2
+    object data=pdf_path type="application/pdf" style="width: 100%; height: 950px; padding-top: 1em"
+      a href=pdf_path noe-stauffert.pdf
