--- a/app/assets/stylesheets/pages/_projects.scss
+++ b/app/assets/stylesheets/pages/_projects.scss
@@ -42,7 +42,9 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  .img-responsive {
-    // max-width: 66% !important;
+  .show {
+    .img-responsive {
+      max-width: 50% !important;
+    }
   }
 }
