--- a/app/views/projects/index.html.slim
+++ b/app/views/projects/index.html.slim
@@ -2,7 +2,7 @@
   / h2 Hi, I'm No&eacute;. I'm a Rails developer. Check out some of my projects:
   .padded-top
     - @projects.each do |project|
-      .col-md-6
+      .col-sm-6
         .col-xs-12
           a href=project_path(project.slug)
             img.img-responsive.center-block src=project.image.content
